assets/sass/partials/_person.scss
// Person

.person-single {

  .person-name-container {
    @include breakpoint($bp-small-desktop) {
      @include span(9);
    }

    @include breakpoint($bp-desktop) {
      @include span(6);
    }

    h1 {
      margin:0;
    }

    background-color:white;
    padding: $padding;
    margin-bottom:0;
    word-wrap:break-word
  }

  .person-bio-container {
    padding:$padding/2 $padding;
    background-color:white;
    @include breakpoint($bp-small-desktop) {
      @include span(10);
    }

    @include breakpoint($bp-desktop) {
      @include span(7);
    }
  }

}

// Person List
 
.person-list {

  @include breakpoint($bp-mobile) {
    .person-list-repeat:first-child { margin-top: -$margin*3; }
  }

  .page-heading {
    margin-top:$margin*2.5;
  }

  .person-surname-heading { 
    @include breakpoint($bp-small-desktop) {
      // @include span(3);
    }
    clear: both;
    @include adjust-font-size-to(24px);
    text-transform: uppercase;
    margin: 0;
    padding: $padding*3 $padding $padding;
    span {
      display: inline-block;
      border: 1px solid $black;
      line-height: 1;
      padding: $padding/2 $padding/2 $padding/4;
    }
  }

  .person-list-container {
    @include breakpoint($bp-mobile) {
      @include span(6);
      &:nth-of-type(even) { @include span(6 last); }
    }
    clear: none;
    margin-bottom: 5px;
    background: $white;
    @include breakpoint($bp-small-desktop) {
      // display: table; width: 100%; // set equal height columns for multi-column breakpoints
      margin-bottom: 2px;
    }

    .person-list-img { 
      @include span(3 of 6);
      float: none; display: table-cell;

      @include breakpoint($bp-small-desktop) {
        @include span(3 of 6);
        // float: none; display: table-cell;
        border-bottom: 0;
      }
      img { 
        width: 100%; 
        height: auto;
        vertical-align: top; 
        opacity: .8;
      }
      background: $white;
      a { }
    }
    &:hover img { opacity: 1; }

    .person-list-details {
      vertical-align: top;
      @include span(3 of 6);
      float: none; display: table-cell;
      
      @include adjust-font-size-to(12px);

      @include breakpoint($bp-mobile) { 
        @include adjust-font-size-to(14px);      
      }

      /* @include breakpoint($bp-small-desktop) {
        @include span(5 wide);
        float: none; display: table-cell; // set equal height columns for multi-column breakpoints
        border-left: 2px solid $bg-color;
        border-bottom: 0;
      }
      @include breakpoint($bp-desktop) {
        @include span(6 wide);
        float: none; display: table-cell; // set equal height columns for multi-column breakpoints
        border-left: 2px solid $bg-color;
        border-bottom: 0;
      } */

      background-color: white;
      padding: $padding $padding $padding/2;

      h2 {
        @include adjust-font-size-to(21px);
        font-family: 'SC AkkuratBold';
        margin-bottom: 0.5em;
        a { background: none; color: $black; }
        a:hover { color: $link-color; }
      }
      h3 {
        @include adjust-font-size-to(15px);
          font-weight: normal; 
      }
      p {
        // @include adjust-font-size-to(16px);
      }
      .event-list-type {
        margin: 0 0 0.5em;
      }

    }
    
  }

}

